# student-workspace-desktop

./: .eslintrc.json  .gitignore  bun.lockb  components.json  convexApi1725891977443.ts  forge.config.ts  index.html  package-lock.json  package.json  plate-components.json  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.base.config.ts  vite.config.ts  vite.main.config.ts  vite.renderer.config.ts
.trunk/: trunk.yaml
amplify/data/: resource.ts
convex/: auth.ts  schema.ts
convex/_generated/: api.d.ts
convex/auth/: auth.ts  credentials_login.ts
convex/documents/: mutation.ts  query.ts
electron/: .eslintrc.json  .gitignore  package.json  plate-components.json  tsconfig.app.json  tsconfig.json  vite.base.config.ts  vite.renderer.config.ts
old/src/: main.tsx
old/src-tauri/: Cargo.toml
src/: bun.lockb  main.tsx  package.json  remove-db.js  routeTree.gen.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: document_commands.rs  favorite_document_commands.rs  mod.rs  shared_document_commands.rs  user_commands.rs
src-tauri/src/models/: document.rs  favorite_document.rs  mod.rs  shared_document.rs  user.rs
src-tauri/src/services/: convex_sync.rs  database.rs  mod.rs
src/components/: dashboard.tsx  error-boundary.tsx  mode-toggle.tsx  theme-provider.tsx  theme-toggle.tsx  title-bar.tsx  workspace-wrapper.tsx
src/db/: db.ts  schema.ts
src/hooks/: use-documents.ts
src/lib/: utils.ts
workspace/: bun.lockb  vite.config.ts
(+194 files in other folders)
