[package]
name = "student-workspace"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "student_workspace_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-persisted-scope = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2.0.0-rc.0"
tauri-plugin-http = "2.0.0-rc.0"
tauri-plugin-deep-link = "2.0.0-rc.0"
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
surrealdb = { version = "1.5.4", features = ["kv-rocksdb"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.0.0-rc.0"
tauri-plugin-window-state = "2.0.0-rc"

